--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/styled-engine-sc": "^5.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.29.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
